@@ -53,6 +53,9 @@ Bug Fixes
 * LUCENE-6378: Fix all RuntimeExceptions to throw the underlying root cause.
   (Varun Thacker, Adrien Grand, Mike McCandless)
 
+* LUCENE-6415: TermsQuery.extractTerms is a no-op (used to throw an
+  UnsupportedOperationException). (Adrien Grand)
+
 API Changes
 
 * LUCENE-6377: SearcherFactory#newSearcher now accepts the previous reader
